--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "description"  : "Node-RED nodes to access SQLDB and dashDB services on Bluemix",
     "dependencies" : {
         "cfenv": "x",
-        "ibm_db" : "1.0.x"
+        "ibm_db" : "1.0.x",
+        "nodes-red-contrib-bluemix-hdfs":"0.x",
+        "node-red-nodes-cf-sqldb-dashdb":"0.x"
     },
     "repository" : {
         "type" : "git",
